Working on Room Database, created @Entity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,17 @@ dependencies {
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
-
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
-    // Retrofit Rx Support
+    // Retrofit Rx2 Support
     implementation "com.squareup.retrofit2:adapter-rxjava2:$version_retrofit"
+
+    // Room
+    implementation "androidx.room:room-runtime:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
+
+    //Room Rx2 Support
+    implementation "androidx.room:room-rxjava2:$version_room"
 
     // okHttp
     implementation "com.squareup.okhttp3:logging-interceptor:$version_okhttp"
